apps/gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: quizup-prod
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ghcr.io/quizup-organization/gateway:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
