apps/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: quizup-prod
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
